--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+
+.Box {
+  width: 60%;
+  margin: 16px auto;
+  border: 1px solid blue;
+  box-shadow: 0 2px 3px white;
+  padding: 16px;
+  text-align: center;
+}
